--- a/views/partials/header-orig.pug
+++ b/views/partials/header-orig.pug
@@ -10,11 +10,11 @@
       ul.nav.navbar-nav
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
-        //- li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
+        li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
           a.nav-link(href='/api') API Examples
-        //- li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
+        li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
           a.nav-link(href='/contact') Contact
-    //-   ul.nav.navbar-nav.ml-auto
+      ul.nav.navbar-nav.ml-auto
         if !user
           li.nav-item(class=(title === 'Login') ? 'active' : undefined)
             a.nav-link(href='/login') Login
