touching files because they don't seem to exist on github

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,6 +4,7 @@
   display: flex;
   padding: 0 0 0 1%;
   /* justify-content: space-between; */
+  /* justify-content: space-between; */
   align-items: center;
   background-color: #044599;
 }
